# synonym

./: README.md
challenge-2/: Cargo.toml  README.md  build.sh  index.html
challenge-2/src/: lib.rs
challenge-3/: Cargo.toml
challenge-3/src/: main.rs
