[package]
name = "challenge-2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
sha2 = "0.10"
ripemd = "0.1"
k256 = { version = "0.13", features = ["ecdsa"] }
bs58 = "0.5"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
bip39 = { version = "2.0", features = ["rand", "unicode-normalization"] }
pbkdf2 = "0.12"
hmac = "0.12"

[dependencies.web-sys]
version = "0.3"
features = ["console"]